--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
 <body>
 <script src="../src/JCHArray.js"></script>
 <script src="../src/JCHLinkList.js"></script>
+<script src="../src/JCHLinkStack.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
