--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,7 @@
 <script src="../src/JCHArray.js"></script>
 <script src="../src/JCHLinkList.js"></script>
 <script src="../src/JCHLinkStack.js"></script>
+<script src="../src/JCHArrayStack.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
