添加栈随机测试

--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,9 @@
 <script src="../src/JCHLinkList.js"></script>
 <script src="../src/JCHLinkStack.js"></script>
 <script src="../src/JCHArrayStack.js"></script>
+<script src="../src/JCHLoopQueue.js"></script>
 <script src="index.js"></script>
+<script src="stackTest.js"></script>
+<script src="queueTest.js"></script>
 </body>
 </html>
