--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,7 @@
 <script src="../src/JCHLinkStack.js"></script>
 <script src="../src/JCHArrayStack.js"></script>
 <script src="../src/JCHLoopQueue.js"></script>
+<script src="../src/JCHLinkQueue.js"></script>
 <script src="index.js"></script>
 <script src="stackTest.js"></script>
 <script src="queueTest.js"></script>
