--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,10 @@
 <script src="../src/JCHArrayStack.js"></script>
 <script src="../src/JCHLoopQueue.js"></script>
 <script src="../src/JCHLinkQueue.js"></script>
+<script src="../src/JCHBSTTree.js"></script>
 <script src="index.js"></script>
 <script src="stackTest.js"></script>
 <script src="queueTest.js"></script>
+<script src="bstTest.js"></script>
 </body>
 </html>
