添加选择排序

--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
 <script src="../src/JCHBSTTree.js"></script>
 
 <script src="../src/sort/JCHBubble.js"></script>
+<script src="../src/sort/JCHSelect.js"></script>
 <script src="index.js"></script>
 <script src="stackTest.js"></script>
 <script src="queueTest.js"></script>
