--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,7 @@
 <script src="../src/sort/JCHSelect.js"></script>
 <script src="../src/sort/JCHInsert.js"></script>
 <script src="../src/sort/JCHMergeSort.js"></script>
+<script src="../src/sort/JCHFastSort.js"></script>
 <script src="index.js"></script>
 <script src="stackTest.js"></script>
 <script src="queueTest.js"></script>
