--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
 <script src="../src/JCHLoopQueue.js"></script>
 <script src="../src/JCHLinkQueue.js"></script>
 <script src="../src/JCHBSTTree.js"></script>
+<script src="../src/JCHMaxHeap.js"></script>
 
 <script src="../src/sort/JCHBubble.js"></script>
 <script src="../src/sort/JCHSelect.js"></script>
@@ -23,6 +24,7 @@
 <script src="stackTest.js"></script>
 <script src="queueTest.js"></script>
 <script src="bstTest.js"></script>
+<script src="maxHeapTest.js"></script>
 
 <script src="sortTest.js"></script>
 </body>
